-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 18
-
Component/s: hotspot
-
b31
-
arm
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8280303 | 19 | Hao Sun | P2 | Resolved | Fixed | b06 |
| JDK-8280621 | 18.0.1 | Hao Sun | P2 | Resolved | Fixed | b04 |
In tier3 test on ARM32 platform, the following test cases failed:
jdk/incubator/vector/ByteMaxVectorTests.java
jdk/incubator/vector/Int64VectorTests.java
jdk/incubator/vector/Short64VectorTests.java
jdk/incubator/vector/Byte64VectorTests.java
jdk/incubator/vector/IntMaxVectorTests.java
jdk/incubator/vector/ShortMaxVectorTests.java
Here is part of the error message:
test ByteMaxVectorTests.ASHRByteMaxVectorTests(byte[-i * 5], byte[cornerCaseValue(i)]): failure
java.lang.AssertionError: (-15, 127) at index #3 expected [-1] but found [-128]
at org.testng.Assert.fail(Assert.java:99)
at org.testng.Assert.failNotEquals(Assert.java:1037)
at org.testng.Assert.assertEqualsImpl(Assert.java:140)
at org.testng.Assert.assertEquals(Assert.java:122)
at org.testng.Assert.assertEquals(Assert.java:841)
at ByteMaxVectorTests.assertArraysEquals(ByteMaxVectorTests.java:357)
at ByteMaxVectorTests.ASHRByteMaxVectorTests(ByteMaxVectorTests.java:2255)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:577)
at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:132)
at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:599)
at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:174)
at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:822)
at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:147)
at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
at org.testng.TestRunner.privateRun(TestRunner.java:764)
at org.testng.TestRunner.run(TestRunner.java:585)
at org.testng.SuiteRunner.runTest(SuiteRunner.java:384)
at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:378)
at org.testng.SuiteRunner.privateRun(SuiteRunner.java:337)
at org.testng.SuiteRunner.run(SuiteRunner.java:286)
at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
at org.testng.TestNG.runSuitesSequentially(TestNG.java:1218)
at org.testng.TestNG.runSuitesLocally(TestNG.java:1140)
at org.testng.TestNG.runSuites(TestNG.java:1069)
at org.testng.TestNG.run(TestNG.java:1037)
at com.sun.javatest.regtest.agent.TestNGRunner.main(TestNGRunner.java:94)
at com.sun.javatest.regtest.agent.TestNGRunner.main(TestNGRunner.java:54)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:577)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:833)
jdk/incubator/vector/ByteMaxVectorTests.java
jdk/incubator/vector/Int64VectorTests.java
jdk/incubator/vector/Short64VectorTests.java
jdk/incubator/vector/Byte64VectorTests.java
jdk/incubator/vector/IntMaxVectorTests.java
jdk/incubator/vector/ShortMaxVectorTests.java
Here is part of the error message:
test ByteMaxVectorTests.ASHRByteMaxVectorTests(byte[-i * 5], byte[cornerCaseValue(i)]): failure
java.lang.AssertionError: (-15, 127) at index #3 expected [-1] but found [-128]
at org.testng.Assert.fail(Assert.java:99)
at org.testng.Assert.failNotEquals(Assert.java:1037)
at org.testng.Assert.assertEqualsImpl(Assert.java:140)
at org.testng.Assert.assertEquals(Assert.java:122)
at org.testng.Assert.assertEquals(Assert.java:841)
at ByteMaxVectorTests.assertArraysEquals(ByteMaxVectorTests.java:357)
at ByteMaxVectorTests.ASHRByteMaxVectorTests(ByteMaxVectorTests.java:2255)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:577)
at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:132)
at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:599)
at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:174)
at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:822)
at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:147)
at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
at org.testng.TestRunner.privateRun(TestRunner.java:764)
at org.testng.TestRunner.run(TestRunner.java:585)
at org.testng.SuiteRunner.runTest(SuiteRunner.java:384)
at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:378)
at org.testng.SuiteRunner.privateRun(SuiteRunner.java:337)
at org.testng.SuiteRunner.run(SuiteRunner.java:286)
at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
at org.testng.TestNG.runSuitesSequentially(TestNG.java:1218)
at org.testng.TestNG.runSuitesLocally(TestNG.java:1140)
at org.testng.TestNG.runSuites(TestNG.java:1069)
at org.testng.TestNG.run(TestNG.java:1037)
at com.sun.javatest.regtest.agent.TestNGRunner.main(TestNGRunner.java:94)
at com.sun.javatest.regtest.agent.TestNGRunner.main(TestNGRunner.java:54)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:577)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:833)
- backported by
-
JDK-8280303 ARM32: several vector test failures for ASHR
-
- Resolved
-
-
JDK-8280621 ARM32: several vector test failures for ASHR
-
- Resolved
-
- relates to
-
JDK-8213134 AArch64: vector shift failed with MaxVectorSize=8
-
- Resolved
-
-
JDK-8277239 SIGSEGV in vrshift_reg_maskedNode::emit
-
- Closed
-
-
JDK-8262916 Merge LShiftCntV and RShiftCntV into a single node
-
- Open
-
(2 links to)