8278267: ARM32: several vector test failures for ASHR

Reviewed-by: njian, dlong